同步代码